# school-app-django

./: Makefile  README.md  pyproject.toml
source/: db.sqlite3
source/apps/main/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
source/apps/main/migrations/: 0001_initial.py  0002_alter_gender_name_alter_parent_address_and_more.py  0003_alter_staff_options_alter_class_students_and_more.py  0004_management.py  0005_alter_management_options_publicmessage.py  0006_alter_publicmessage_author.py
source/apps/main/templates/main/: base.html  class_detail.html  class_list.html  index.html  management_list.html  parent_detail.html  staff_list.html  teacher_list.html
source/apps/main/templates/registration/: login.html
source/apps/school_main/: admin.py  apps.py  models.py
source/apps/school_main/migrations/: 0001_initial.py  0002_alter_gender_name_alter_parent_address_and_more.py
source/config/: .env.template  settings.py  urls.py
