[tool.poetry]
name = "django-school-project"
version = "0.1.0"
description = ""
authors = ["iamkhaidarzakirov <khaidarzakirov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
django = "4.2"
sqlalchemy = "2.0.21"
python-decouple = "3.8"
django-debug-toolbar = "^4.2.0"
redis = "5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
